--- a/QuickZip/QuickZip.csproj
+++ b/QuickZip/QuickZip.csproj
@@ -233,6 +233,7 @@
     <Compile Include="Controllers\HistoricalMandateController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\OldMandateController.cs" />
     <Compile Include="Entity\Common.cs" />
     <Compile Include="Entity\DbSecurity.cs" />
     <Compile Include="Entity\GetEntityID_Result.cs">
@@ -758,6 +759,8 @@
     <Compile Include="Models\OldEmandate\BankBind.cs" />
     <Compile Include="Models\OldEmandate\Downloadoldemandateaccesslayer.cs" />
     <Compile Include="Models\OldEmandate\Searchdata.cs" />
+    <Compile Include="Models\OldMandate\OldMandateAttribute.cs" />
+    <Compile Include="Models\OldMandate\OldMandateClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -869,6 +872,8 @@
     <TypeScriptCompile Include="ClientApp\app\Services\Historical-Mandate\historical-mandate-service.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\login-service.service.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\login-service.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\oldmandate\oldmandate.service.spec.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\oldmandate\oldmandate.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\sidebar\sidebar.component.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\sidebar\sidebar.component.ts" />
     <TypeScriptCompile Include="ClientApp\environments\environment.prod.ts" />
@@ -877,6 +882,7 @@
     <TypeScriptCompile Include="ClientApp\Models\global-error-handler.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Historical-Mandate\historical-mandate-class.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Login\logindetails.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\Old-Mandate\OldMandateClass1.ts" />
     <TypeScriptCompile Include="ClientApp\Models\OldEmandate\Bankbind.ts" />
     <TypeScriptCompile Include="ClientApp\Models\OldEmandate\SearchData.ts" />
     <TypeScriptCompile Include="ClientApp\Models\Validations\validation.ts" />
