--- a/QuickZip/Web.config
+++ b/QuickZip/Web.config
@@ -10,7 +10,7 @@
     </configSections>
   <appSettings>
     <add key="WebAppUrl" value="http://localhost:53378/" />
-    <add key="webpages:Version" value="3.0.0.0" />
+    <!--<add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
@@ -20,7 +20,7 @@
     <add key="Amazon_UserId" value="AKIA4SFSBAXININL4WXS" />
     <add key="Amazon_MailPassword" value="BL5hC6xs6p4eN0CLc9f4aT9zHQYLNj+R9q5FVAkql33K" />
     <add key="Amazon_FromMailId" value="admin@qchk.in" />
-    <add key="Team" value="QuickZip" />
+    <add key="Team" value="QuickZip" />-->
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
