--- a/QuickZip/QuickZip.csproj
+++ b/QuickZip/QuickZip.csproj
@@ -217,6 +217,7 @@
     <Content Include="Entity\QuickZip.edmx.diagram">
       <DependentUpon>QuickZip.edmx</DependentUpon>
     </Content>
+    <Content Include="ExcelFiles\UMRN.xlsx" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -236,6 +237,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\OldMandateController.cs" />
+    <Compile Include="Controllers\UMRNUploadController.cs" />
     <Compile Include="Controllers\USerController.cs" />
     <Compile Include="Entity\Common.cs" />
     <Compile Include="Entity\DbSecurity.cs" />
@@ -781,6 +783,11 @@
     <Compile Include="Models\OldEmandate\Searchdata.cs" />
     <Compile Include="Models\OldMandate\OldMandateAttribute.cs" />
     <Compile Include="Models\OldMandate\OldMandateClass.cs" />
+    <Compile Include="Models\UMRNUpload\GridSuccess.cs" />
+    <Compile Include="Models\UMRNUpload\GridUnsuccess.cs" />
+    <Compile Include="Models\UMRNUpload\MainGrid.cs" />
+    <Compile Include="Models\UMRNUpload\MainGridDetails.cs" />
+    <Compile Include="Models\UMRNUpload\UMRNUpload.cs" />
     <Compile Include="Models\User\AccessRights.cs" />
     <Compile Include="Models\User\CategoryCodes.cs" />
     <Compile Include="Models\User\Checker.cs" />
@@ -918,6 +925,8 @@
     <TypeScriptCompile Include="ClientApp\app\Services\login-service.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\oldmandate\oldmandate.service.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\oldmandate\oldmandate.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\UMRNUpload\umrn-upload.service.spec.ts" />
+    <TypeScriptCompile Include="ClientApp\app\Services\UMRNUpload\umrn-upload.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\User\user-service.service.spec.ts" />
     <TypeScriptCompile Include="ClientApp\app\Services\User\user-service.service.ts" />
     <TypeScriptCompile Include="ClientApp\app\sidebar\sidebar.component.spec.ts" />
@@ -948,6 +957,10 @@
     <TypeScriptCompile Include="ClientApp\Models\Old-Mandate\OldMandateClass1.ts" />
     <TypeScriptCompile Include="ClientApp\Models\OldEmandate\Bankbind.ts" />
     <TypeScriptCompile Include="ClientApp\Models\OldEmandate\SearchData.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\UMRNUpload\GridSuccess.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\UMRNUpload\GridUnsuccess.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\UMRNUpload\MainGrid.ts" />
+    <TypeScriptCompile Include="ClientApp\Models\UMRNUpload\MainGridDetails.ts" />
     <TypeScriptCompile Include="ClientApp\Models\User\access-rights.ts" />
     <TypeScriptCompile Include="ClientApp\Models\User\bankval.ts" />
     <TypeScriptCompile Include="ClientApp\Models\User\category-code.ts" />
