--- a/QuickZip/Web.config
+++ b/QuickZip/Web.config
@@ -14,7 +14,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  
+   <add key="LegacyCount" value="15000" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -59,6 +59,8 @@
   </system.webServer>
   <connectionStrings>
     <add name="QuickCheckEmandate_AngularEntities" connectionString="metadata=res://*/Entity.QuickZip.csdl|res://*/Entity.QuickZip.ssdl|res://*/Entity.QuickZip.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.40.86;initial catalog=QuickCheckEmandate_Angular;persist security info=True;user id=ankush;password=@nkush@123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+ <add name="Excel03ConString" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source={0};Extended Properties='Excel 8.0;HDR={1}'" />
+    <add name="Excel07ConString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source={0};Extended Properties='Excel 8.0;HDR={1}'" />  
   </connectionStrings>
   <entityFramework>
     <providers>
